--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
 	</style>
 </head>
-<body>
-	 <img src="img/header.jpg">
-	 <img src="img/hero.jpg">
-	 <img src="img/acustica.jpg">	 
+<body>	 
+	 <img src="img/nueva-version.jpg">	 
 </body>
 </html>
